compilateurDeca/src/test/deca/context/invalid/objet/returns/return_in_void.deca
// Description:
//    Test de contexte : Return dans une méthode void
//
// Resultats:
//    Erreur contextuelle : Impossible de retourner une valeur dans une méthode de type void
//
// Historique:
//    cree le 15/01/2026

class A {
    void m() {
        return 1;
    }
}
